# SudoSolver

./: .gitignore  .pylintrc  pyproject.toml  tox.ini
scripts/: main.py  sudokus.spf
src/sudosolve/: reader.py  solver.py  util.py
tests/: test_loader.py  test_reader.py  test_solver.py
