[project]
name = "sudosolve"
description = "The sudoku solver."
version = "0.1"
authors = [
    {name = "Folkert Bleichrodt", email = "fbleichrodt@gmail.com"},
]

dependencies = [
    "numpy",
    "colorama"
]

[build-system]
requires = ["setuptools", "numpy"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
